--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -24,7 +24,7 @@ html, body {
     }
     #routerView {
       margin-top: 10px;
-      #mealList {
+      #worklogList {
         #search {
           div:last-child {
             padding-left: 0;
@@ -39,17 +39,17 @@ html, body {
           }
         }
         table {
-          tr.meal {
+          tr.worklog {
             background-color: rgba(0, 128, 0, 0.6);
           }
-          tr.exceededCalories {
+          tr.exceededWorklogs {
             background-color: rgba(255, 0, 0, 0.62);
             color: white;
           }
 
         }
       }
-      #caloriesSettings {
+      #worklogsSettings {
         table tr td {
           padding: 2px;
         }
